# API_project

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  schema.py
project/: cw1-kopia.py  database.py  main.py  models.py  schema.py
project/project/: database.py  main.py  models.py  test_db_connection.py
project/project/repositories/: customers.py  ships.py  users.py
project/project/routers/: customers.py  ships.py  users.py
project/project/schemas/: bookings.py  customers.py
project/repositories/: bookings.py  customers.py  ships.py
project/routers/: attachments.py  bookings.py  customers.py  ships.py
project/schemas/: bookings.py  customers.py  ships.py
src/: pyproject.toml
src/project/: database.py  main.py  models.py
src/project/repositories/: bookings.py  ships.py  users.py
src/project/routers/: bookings.py  customers.py  ships.py  tests.py  users.py
src/project/schemas/: bookings.py  customers.py  ships.py  users.py
