[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["paulinapalma <paulina.anna.palma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
